doplnené alt u img, upraven logo ve footeru

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                     <div class="main-cards">
                         <div class="main-cards-div1">
                             <a href="elektroinstalace.html">
-                                <img src="./_img/Container-works.jpg">
+                                <img src="./_img/Container-works.jpg" alt="Karta Elektroinstalace">
                             </a>
                         </div>
         
                         <div class="main-cards-div2">
                             <a href="logistika.html">
-                                <img src="./_img/Container-logistics.jpg">
+                                <img src="./_img/Container-logistics.jpg" alt="Karta Logistika">
                             </a>
                         </div>                        
                     </div>
@@ -72,18 +72,18 @@
                         <div class="splide slider1" role="group" aria-label="Splide Basic HTML Example">
                             <div class="splide__track">
                                     <ul class="splide__list">
-                                        <li class="splide__slide"><img src="./_loga/logo-airbnb.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-dropbox.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-linear.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-microsoft.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-slack.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-spotify.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-airbnb.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-dropbox.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-linear.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-microsoft.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-slack.svg"></li>
-                                        <li class="splide__slide"><img src="./_loga/logo-spotify.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-airbnb.svg" alt="Logo Airbnb"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-dropbox.svg" alt="Logo Dropbox"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-linear.svg" alt="Logo Linear"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-microsoft.svg" alt="Logo Microsoft"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-slack.svg" alt="Logo Slack"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-spotify.svg" alt="Logo Spotify"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-airbnb.svg" alt="Logo Airbnb"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-dropbox.svg" alt="Logo dropbox"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-linear.svg" alt="Logo Linear"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-microsoft.svg" alt="Logo Microsoft"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-slack.svg" alt="Logo Slack"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-spotify.svg" alt="Logo Spotify"></li>
                                     </ul>
                             </div>
                         </div>
@@ -199,11 +199,11 @@
                         <div class="footer-last-frame">
                             <p>Created by</p>
                             <a href="#">
-                                <img src="./_loga/bengr.svg">
+                                <img src="./_loga/bengr.svg" alt="Logo Bengr">
                             </a>
                             <p>/ Design by</p>
                             <a href="#">
-                                <img src="./_loga/bengr.svg">
+                                <img src="./_loga/tomas_krenek_logo.svg" alt="Logo Tomáš Křenek">
                             </a>
                         </div>
                     </div>
