--- a/logistika.html
+++ b/logistika.html
@@ -13,7 +13,7 @@
         <div class="header-container">
             <div class="header-wrapper">
                 <div class="header-logo">
-                    <a href="#">
+                    <a href="index.html">
                         <img src="./_loga/Variant=Light, Type=Works.svg" alt="logo M&M Works">
                     </a>
                 </div>
