--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
     
-                    <div>
+                    <div class="elektro-item-img">
                         <img src="./_img/image 2.jpg" alt="Úvodní fotka Elektroinstalace">
                     </div>
                 </div>
