hotova dalsi sekce Section Cards

--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -170,7 +170,7 @@
 
                     <div class="services-text services-part-second">
                         <h2>Fotovoltaiky</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ex aspernatur, itaque eos nesciunt deleniti debitis! Quae reiciendis earum, facere ipsa aspernatur eos assumenda laboriosam nam quo officiis modi, dicta fugit iste rerum. Eos temporibus consectetur vero delectus impedit corporis amet incidunt reprehenderit dolores esse laudantium officia debitis, nostrum nemo?</p>
+                        <p>Naša takmer 4 ročná prítomnosť na trhu zaručuje, že s nami môžete počítať na dlhú dobu. Prinášame nielen kvalitné produkty, ale aj záruky a dlhodobé partnerstvo zamerané na vaše potreby.</p>
                     </div>
                 </div>
             </div>
