hotova responziva pro sekci Section About Operation

--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
 
-                <div class="services-items">
+                <div class="services-items services-items-reverse">
                     <div class="services-img">
                         <img src="./_img/elektro-fotovoltaiky.jpg" alt="Fotka Fotovoltaiky">
                     </div>
