hotova druha cast responzivy ve footeru - vyresen formular + text pod nim

--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -409,13 +409,14 @@
                         </div>
         
                         <div class="footer-last-frame">
-                            <p>Created by</p>
-                            <a href="#">
+                            <p class="mr-6">Created by</p>
+                            <a href="https://www.bengr.cz/">
                                 <img src="./_loga/bengr.svg" alt="Logo Bengr">
                             </a>
-                            <p>/ Design by</p>
-                            <a href="#">
-                                <img src="./_loga/tomas_krenek_logo.svg" alt="Logo Tomáš Křenek">
+                            <p class="m-8">/</p>
+                            <p class="mr-6">Design by</p>
+                            <a href="https://www.tomaskrenek.com/"  class="footer-last-name">
+                                <p>Tomáš Křenek</p>
                             </a>
                         </div>
                     </div>
