hotova cast responzivy u karty Logistika

--- a/logistika.html
+++ b/logistika.html
@@ -67,7 +67,7 @@
                         </div>
                     </div>
     
-                    <div>
+                    <div class="elektro-item-img">
                         <img src="./_img/image-logistika.jpg" alt="Úvodní fotka Logistika">
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
 
-                <div class="services-items">
+                <div class="services-items items-logistika-reverse">
                     <div class="services-img">
                         <img src="./_img/Container3-logistika.jpg" alt="Fotka Expresní přepravy">
                     </div>
