hotova cela media queries pro uvodni stranku s kartama

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </div>
                     </div>
         
-                    <div class="main-splide-content">
+                    <div class="main-splide-content section-slider">
                         <div class="splide slider1" role="group" aria-label="Splide Basic HTML Example">
                             <div class="splide__track">
                                     <ul class="splide__list">
