hotova media queries karty Logistika

--- a/logistika.html
+++ b/logistika.html
@@ -55,7 +55,7 @@
         <!--Introductory Section-Logistics-->
         <section>
             <div class="elektro-bg">
-                <div class="main-information">
+                <div class="main-information main-info-logistics">
                     <div class="elektro-features">
                         <div class="elektro-items">
                             <img src="./_icons/arrow_back.svg" alt="Ikona Šipky">
