predelana uvodni sekce v karte logistika

--- a/logistika.html
+++ b/logistika.html
@@ -56,7 +56,7 @@
         <section>
             <div class="elektro-bg">
                 <div class="main-information main-info-logistics">
-                    <div class="elektro-features">
+                    <div class="elektro-features main-content-logistics">
                         <div class="elektro-items">
                             <img src="./_icons/arrow_back.svg" alt="Ikona Šipky">
                             <p>Zpět</p>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
     
-                    <div class="elektro-item-img">
+                    <div class="elektro-item-img img-item-logistics">
                         <img src="./_img/image-logistika.jpg" alt="Úvodní fotka Logistika">
                     </div>
                 </div>
