zmenseny nadpisy dle rezponzivni sirky

--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -376,7 +376,7 @@
                     </div>
     
                     <div class="footer-first-list">
-                        <h4>Fakturační údaje</h4>
+                        <p>Fakturační údaje</p>
                         <ul>
                             <li><a href="#">M&M Works s.r.o.</a></li>
                             <li><a href="#">Šarišské Lužianky 20, 08232 Kojatice</a></li>
@@ -391,7 +391,7 @@
                     </div>
     
                     <div class="footer-second-list">
-                        <h4>M&M Works</h4>
+                        <p>M&M Works</p>
                         <ul>
                             <li><a href="#">O nás</a></li>
                             <li><a href="#">Elektroinstalace</a></li>
