hotove stavy pro sekci footer-second-part

--- a/logistika.html
+++ b/logistika.html
@@ -449,26 +449,23 @@
                     <div class="footer-first-list">
                         <p>Fakturační údaje</p>
                         <ul>
-                            <li><a href="#">M&M Works s.r.o.</a></li>
-                            <li><a href="#">Šarišské Lužianky 20, 08232 Kojatice</a></li>
-                            <li><a href="#">IČO: 53 976 401 DIČ: 2121547494</a></li>
+                            <li><p>M&M Works s.r.o.</p></li>
+                            <li><p>Šarišské Lužianky 20, 08232 Kojatice</p></li>
+                            <li><p>IČO: 53 976 401 DIČ: 2121547494</p></li>
                         </ul>
     
                         <ul>
-                            <li><a href="#">Bankové spojenie: ČSOB a.s.</a></li>
-                            <li><a href="#">SWIFT: CEKOSKBX</a></li>
-                            <li><a href="#">IBAN: SK47 7500 0000 0040 2936 0964</a></li>
+                            <li><p>Bankové spojenie: ČSOB a.s.</p></li>
+                            <li><p>SWIFT: CEKOSKBX</p></li>
+                            <li><p>IBAN: SK47 7500 0000 0040 2936 0964</p></li>
                         </ul>
                     </div>
     
                     <div class="footer-second-list">
                         <p>M&M Works</p>
                         <ul>
-                            <li><a href="#">O nás</a></li>
                             <li><a href="#">Elektroinstalace</a></li>
                             <li><a href="#">Logisticka</a></li>
-                            <li><a href="#">Kontakt</a></li>
-                            <li><a href="#">Privacy policy</a></li>
                         </ul>
                     </div>
                 </div>
