hotove stavy pro footer form

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                         <form class="footer-form">
                             <div class="row">
                                 <div class="input-group group-name">
-                                    <input type="text" id="name" class="shit" placeholder="Placeholder" required>
+                                    <input type="text" id="name" placeholder="Placeholder" required>
                                     <label for="name">First name</label>
                                 </div>
                                 <div class="input-group group-name">
-                                    <input type="text" id="name" class="shitone" placeholder="Placeholder" required>
+                                    <input type="text" id="name" placeholder="Placeholder" required>
                                     <label for="name">Last name</label>
                                 </div>
                             </div>
@@ -203,8 +203,8 @@
                     <div class="footer-second-list">
                         <p>M&M Works</p>
                         <ul>
-                            <li><a href="#">Elektroinstalace</a></li>
-                            <li><a href="#">Logisticka</a></li>
+                            <li><a href="elektroinstalace.html">Elektroinstalace</a></li>
+                            <li><a href="logistika.html">Logisticka</a></li>
                         </ul>
                     </div>
                 </div>
