mensi uprava v js kvuli sliderum, predelany kod arrow na podstrankach

--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -58,8 +58,10 @@
                 <div class="main-information">
                     <div class="elektro-features">
                         <div class="elektro-items">
-                            <img src="./icons/arrow_back.svg" alt="Šipka ikona">
-                            <p>Zpět</p>
+                            <a href="index.html">
+                                <img src="./icons/arrow_back.svg" alt="Šipka ikona">
+                                <p>Zpět</p>
+                            </a>
                         </div>
     
                         <div>
