--- a/logistika.html
+++ b/logistika.html
@@ -58,8 +58,10 @@
                 <div class="main-information main-info-logistics">
                     <div class="elektro-features main-content-logistics">
                         <div class="elektro-items">
-                            <img src="./icons/arrow_back.svg" alt="Ikona Šipky">
-                            <p>Zpět</p>
+                            <a href="index.html">
+                                <img src="./icons/arrow_back.svg" alt="Šipka ikona">
+                                <p>Zpět</p>
+                            </a>
                         </div>
     
                         <div>
