mensi predelani karty na uvodni strance

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                             <a href="elektroinstalace.html">
                                 <div class="main-card-bg"></div>
                                 <div class="main-card-img">
-                                    <img src="./img/image 2.jpg">
+                                    <img src="./img/image 2.jpg" alt="image">
                                 </div>
                                 
                                 <div class="main-logo-img">
-                                    <img src="./loga/Variant=Dark, Type=Works.svg">
+                                    <img src="./loga/m-m-works-logo.svg" alt="logo">
                                 </div>
                                 <div class="main-content-btn">
                                     <button>Více o službě</button>
@@ -76,11 +76,11 @@
                             <a href="logistika.html">
                                 <div class="main-card-bg"></div>
                                 <div class="main-card-img">
-                                    <img src="./img/image-logistika.jpg">
+                                    <img src="./img/image-logistika.jpg" alt="image">
                                 </div>
                                 
                                 <div class="main-logo-img">
-                                    <img src="./loga/Variant=Dark, Type=Works.svg">
+                                    <img src="./loga/m-m-logistics-logo.svg" alt="logo">
                                 </div>
                                 <div class="main-content-btn">
                                     <button>Více o službě</button>
