hover efekt na sipku - zpet

--- a/logistika.html
+++ b/logistika.html
@@ -14,7 +14,7 @@
             <div class="header-wrapper">
                 <div class="header-logo">
                     <a href="index.html">
-                        <img src="./loga/Variant=Light, Type=Works.svg" alt="logo M&M Works">
+                        <img src="./loga/m-m-logistics-logo-dark.svg" alt="logo M&M Logistics">
                     </a>
                 </div>
 
