upraveny dve drobnosti ve footeru

--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
                         </div>
         
                         <div class="footer-last-frame">
-                            <p class="mr-6">Created by</p>
-                            <a href="https://www.bengr.cz/">
-                                <img src="./loga/bengr.svg" alt="Logo Bengr">
+                            <p class="mr-6">Coded by</p>
+                            <a href="https://github.com/Terezie-Mazacova">
+                                <p>Terezie Mazáčová</p>
                             </a>
                             <p class="m-8">/</p>
                             <p class="mr-6">Design by</p>
