--- a/logistika.html
+++ b/logistika.html
@@ -432,7 +432,7 @@
                 <div class="footer-second-part">
                     <div class="footer-item-contact">
                         <div>
-                            <a href="#">
+                            <a href="index.html">
                                 <img src="./loga/Variant=Dark, Type=Works.svg" alt="logo M&M Works">
                             </a>
                         </div>
@@ -479,13 +479,14 @@
                         </div>
         
                         <div class="footer-last-frame">
-                            <p>Created by</p>
-                            <a href="#">
-                                <img src="./loga/bengr.svg" alt="Logo Bengr">
+                            <p class="mr-6">Coded by</p>
+                            <a href="https://github.com/Terezie-Mazacova">
+                                <p>Terezie Mazáčová</p>
                             </a>
-                            <p>/ Design by</p>
-                            <a href="#">
-                                <img src="./loga/bengr.svg" alt="Logo Tomáš Křenek">
+                            <p class="m-8">/</p>
+                            <p class="mr-6">Design by</p>
+                            <a href="https://www.tomaskrenek.com/"  class="footer-last-name">
+                                <p>Tomáš Křenek</p>
                             </a>
                         </div>
                     </div>
