--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -363,7 +363,7 @@
                 <div class="footer-second-part">
                     <div class="footer-item-contact">
                         <div>
-                            <a href="#">
+                            <a href="index.html">
                                 <img src="./loga/Variant=Dark, Type=Works.svg" alt="logo M&M Works">
                             </a>
                         </div>
@@ -410,9 +410,9 @@
                         </div>
         
                         <div class="footer-last-frame">
-                            <p class="mr-6">Created by</p>
-                            <a href="https://www.bengr.cz/">
-                                <img src="./loga/bengr.svg" alt="Logo Bengr">
+                            <p class="mr-6">Coded by</p>
+                            <a href="https://github.com/Terezie-Mazacova">
+                                <p>Terezie Mazáčová</p>
                             </a>
                             <p class="m-8">/</p>
                             <p class="mr-6">Design by</p>
